# jmstate

./: LICENSE  README.md  fitting-test-multi.ipynb  fitting-test.ipynb  forecast-test.ipynb  paquid-test.ipynb  paquid-test2.ipynb  pyproject.toml  selection-test.ipynb
.github/workflows/: ci.yml  lint.yml
callbacks/: _projections.py
docs/source/: base_hazards.rst  conf.py  functions.rst  index.rst  individual_effects.rst  jobs.rst  model.rst  modules.rst  regression_and_link.rst  typedefs.rst  types.rst  utils.rst  visualization.rst
jmstate/: __init__.py
jmstate/callbacks/: __init__.py  _computations.py  _misc.py  _projections.py  _scheduling.py  criteria.py  ebes.py  fim.py
jmstate/functions/: __init__.py  _base_hazards.py  _individual_effects.py  _regression_and_link.py  base_hazards.py  individual_effects.py  regression_and_link.py
jmstate/jobs/: __init__.py  _computation.py  _fitting.py  _logging.py  _prediction.py  _projection.py  _projections.py  _stopping.py
jmstate/model/: __init__.py  _base.py  _cache.py  _fit.py  _hazard.py  _longitudinal.py  _predict.py  _prediction.py  _prior.py  _sampler.py  model.py
jmstate/penalties/: __init__.py  lp.py
jmstate/sampler/: _sampler.py
jmstate/typedefs/: __init__.py  _data.py  _defaults.py  _defs.py  _jobs_defaults.py  _params.py  _structures.py  _validators.py
jmstate/types/: __init__.py  _data.py  _defs.py  _parameters.py  _structures.py
jmstate/utils/: __init__.py  _cache.py  _checks.py  _convert_parameters.py  _defs.py  (+10 more)
model/: _base.py
uniformbands/: __init__.py  _interface.py  _methods.py
(+15 files in other folders)
