[project]
name = "jmstate"
description = "Joint modeling with automatic differentiation"
authors = [{ name = "Félix Laplante", email = "felixlaplante0@gmail.com" }]
requires-python = ">=3.10"
version = "0.1.0"
dependencies = ["torch", "numpy", "tqdm", "pydantic", "xxhash"]

[tool.ruff]
lint.select = [
    "D",   # pydocstyle (docstring conventions)
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
lint.ignore = ["D417", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"
